Separated JS out of HTML + dynamic content loading
- separated all js in own files;
- added logic for dynamic content loading.

--- a/src/index.css
+++ b/src/index.css
@@ -149,6 +149,11 @@ main {
     align-items: center;
     gap: 2em;
 }
+.main__content {
+    width: 90vw;
+    min-height: fit-content;
+    overflow: visible;
+}
 
 .sub-title {
     margin: auto;
