--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,27 @@
     box-sizing: border-box;
 }
 
+a, a:hover, a:visited, a:focus {
+    text-decoration: none;
+    color: inherit;
+}
+
+ul, ul li {
+    margin: 0;
+    padding: 0;
+	list-style: none;
+}
+
+h1, p {
+    margin: 0;
+    padding: 0;
+}
+
+h1 {
+    font-weight: 300;
+    font-size: 2em;
+}
+
 :root {
     --bg-dark-color: #1e1b26;
     --bg-light-color: #1f1c28;
@@ -13,11 +34,6 @@
 .make-it-darker {
     --bg-dark-color: #000;
     --accent-color: #dad8d8;
-    /* 
-    accent - white
-    bg - black
-    text - white
-    */
 }
 
 img {
@@ -186,6 +202,55 @@ main {
     justify-content: center;
 }
 
+.card-wrapper {
+    display: grid;
+    grid-auto-flow: column;
+    grid-auto-columns: 250px;
+    justify-content: center;
+    gap: 1rem;
+    padding: 0 1rem 1rem;
+    width: 80%;
+    overflow-x: auto;
+    overscroll-behavior-inline: contain;
+    scroll-snap-type: inline mandatory;
+    scroll-padding-inline: 1rem;
+}
+
+.card-wrapper > * {
+    scroll-snap-align: start;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 0.6rem;
+    border: 1px solid var(--accent-color);
+    background: var(--bg-dark-color);
+    padding: 1rem;
+    border-radius: 10px;
+    box-shadow: 2px 2px 0 black;
+}
+
+.card__img {
+    inline-size: 100%;
+    aspect-ratio: 4 / 4;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.card__img:hover {
+    filter: brightness(120%);
+}
+
+
+.make-it-darker .card__img {
+    filter: grayscale(100%)
+}
+.make-it-darker .card__img:hover {
+    filter: none;
+}
+
 .btn {
     display: block;
     cursor: pointer;
@@ -322,36 +387,23 @@ footer {
     transform: rotate(90deg);
 }
 
-/* @media (min-width: 800px) {
-    #main-grid {
-        display: grid;
-        grid-template-columns: 
-            minmax(1em, 1fr)
-            repeat(3, minmax(10rem, 30rem))
-            minmax(1em, 1fr);
-        grid-template-rows: 
-        min-content
-        auto
-        min-content;
-    }
+/* scrollbar */
+::-webkit-scrollbar {
+    width: 0.5em;
+}
 
-    header {
-        grid-column: 1 / 6;
-        grid-row: 1;
-    }
+::-webkit-scrollbar-track {
+    background-color: var(--bg-dark-color);
+}
 
-    main {
-        grid-column: 1 / 6;
-        grid-row: 2;
-    }
+:-webkit-scrollbar-thumb {
+    background-color: var(--accent-color);
+    border: 1px solid var(--bg-dark-color);
+}
 
-    .logo {
-        grid-column: 1;
-        grid-row: 1;
+@supports (scrollbar-color: red blue) {
+    * {
+        scrollbar-color: var(--accent-color) var(--bg-dark-color);
+        scrollbar-width: thin;
     }
-
-    footer {
-        grid-column: 1 / 6;
-        grid-row: 3;
-    }
-} */
+}
